<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muse EEG Data Collection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">Unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Alpha relative:</string>

    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>

    <string name="museconnection_title">Choose your Muse Device to use!</string>
    <string name="tv_muse_connection_title"> Muse: </string>
    <string name="tv_muse_connected"> Connected </string>

    <string name="btn_record_data"> Start </string>
    <string name="name"> Name </string>
    <string name="enter_name"> Please enter a name! </string>

    <string name="btn_start_nomuse">Walkthrough</string>

    <string name="start_rec"> Start Recording </string>
    <string name="stop_rec"> Stop Recording </string>

    <string name="btn_0"> 0 </string>
    <string name="btn_1"> 1 </string>
    <string name="btn_2"> 2 </string>
    <string name="btn_3"> 3 </string>
    <string name="btn_4"> 4 </string>
    <string name="btn_5"> 5 </string>
    <string name="btn_6"> 6 </string>
    <string name="btn_7"> 7 </string>
    <string name="btn_8"> 8 </string>
    <string name="btn_9"> 9 </string>

    <string name="hsi_1"> Excellent </string>
    <string name="hsi_2"> Good </string>
    <string name="hsi_3"> Bad </string>
    <string name="hsi_4"> Bad </string>

    <string name="tv_feedback_correct"> Correct! </string>
    <string name="tv_feedback_wrong"> Wrong! </string>
    <string name="tv_feedback_timeout"> Timeout! </string>

    <string name="main_instruction_title">Instructions for Data recording</string>
    <string name="main_instruction_text">Sequence of Events\n1. Arithmetic Training (2 Minutes)\n2. Guided Meditation (10 Minutes) \n3. Arithmetic Test (2 Minutes)\n\nEnsure that you are wearing the Muse Headband and Earpiece!! </string>


    <string name="dialog_arith_training_title">Instruction for Data Recording </string>
    <string name="dialog_arith_training_instruction">"Adjust the Muse headband until all channels are Excellent!\nThe begin button will unlock when all channels are stable on Excellent.\n\nMuse Status: %1$s\nCh 1: %2$s \nCh 2: %3$s \nCh 3: %4$s \nCh 4: %5$s\n\nArithmetic training allows you to familiarise with the questions for the upcoming test!"</string>
    <string name="dialog_arith_training_btn_pos"> Begin Arithmetic Training! </string>

    <string name="dialog_break_title"> Arithmetic Training Complete!! </string>
    <string name="dialog_break_msg">Next: Guided Meditation\n\nEnsure you have put on your earpiece!!\n\nClose your eyes and relax and follow the instructions on the audio track. The cue for the guided meditation ending is "When you are ready, begin to go about your daily life".</string>
    <string name="dialog_break_btn_positive"> Begin Guided Meditation </string>

    <string name="dialog_guided_meditation_title"> Guided Meditation Completed </string>
    <string name="dialog_guided_meditation_msg">Next: Arithmetic test.\n\nThe nature of this experiment requires the arithmetic test score to be above 75% for the results to be used. </string>
    <string name="dialog_guided_meditation_btn_pos"> Begin Arithmetic Test </string>

    <string name="dialog_arith_complete_title"> Complete! </string>
    <string name="dialog_arith_complete_message"> Thank you for your participation!\n\nYou have completed the data recording.\n\nTap on Finish to exit!! </string>
    <string name="dialog_arith_complete_btn_pos"> Finish! </string>

    <string name="tv_activity_training_instr"> Current Task: Arithmetic Training </string>
    <string name="tv_activity_guided_meditation_instr"> Current Task: Guided Meditation </string>
    <string name="tv_activity_test_instr"> Current Task: Arithmetic Test </string>

    <string name="tv_meditation_citation"> Meditation Track: \nThe Honest Guys - Meditation - Relaxation </string>
</resources>
